// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SyncErrorMessage > should handle retry 1`] = `
<div>
  There has been a network problem on 
  <span>
    <strong>
      ARK Devnet
    </strong>
    , 
  </span>
  <span>
    <strong>
      ARK Mainnet
    </strong>
    , 
  </span>
  <span>
    <span>
       
      and
       
    </span>
    <strong>
      Lisk Devnet
    </strong>
  </span>
   while trying to retrieve your wallet information and as a result, your data could be out of sync or incorrect. Click 
  <span
    data-testid="SyncErrorMessage__retry"
  >
    <a
      data-discover="true"
      href="/"
    >
      <a
        class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 ring-focus group/inner inline-block"
        data-ring-focus-margin="-m-1"
        data-testid="Link"
      >
        <span
          class="border-b border-transparent break-all transition-colors delay-100 duration-200 group-hover/inner:border-current"
        >
          here
        </span>
      </a>
    </a>
  </span>
   to retry.
</div>
`;

exports[`SyncErrorMessage > should render multiple failed networks 1`] = `
<div>
  There has been a network problem on 
  <span>
    <strong>
      ARK Devnet
    </strong>
    , 
  </span>
  <span>
    <strong>
      ARK Mainnet
    </strong>
    , 
  </span>
  <span>
    <span>
       
      and
       
    </span>
    <strong>
      Lisk Devnet
    </strong>
  </span>
   while trying to retrieve your wallet information and as a result, your data could be out of sync or incorrect. Click 
  <span
    data-testid="SyncErrorMessage__retry"
  >
    <a
      data-discover="true"
      href="/"
    >
      <a
        class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 ring-focus group/inner inline-block"
        data-ring-focus-margin="-m-1"
        data-testid="Link"
      >
        <span
          class="border-b border-transparent break-all transition-colors delay-100 duration-200 group-hover/inner:border-current"
        >
          here
        </span>
      </a>
    </a>
  </span>
   to retry.
</div>
`;

exports[`SyncErrorMessage > should render one failed network 1`] = `
<div>
  There has been a network problem on 
  <span>
    <strong>
      ARK Devnet
    </strong>
  </span>
   while trying to retrieve your wallet information and as a result, your data could be out of sync or incorrect. Click 
  <span
    data-testid="SyncErrorMessage__retry"
  >
    <a
      data-discover="true"
      href="/"
    >
      <a
        class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 ring-focus group/inner inline-block"
        data-ring-focus-margin="-m-1"
        data-testid="Link"
      >
        <span
          class="border-b border-transparent break-all transition-colors delay-100 duration-200 group-hover/inner:border-current"
        >
          here
        </span>
      </a>
    </a>
  </span>
   to retry.
</div>
`;

exports[`SyncErrorMessage > should render two failed networks 1`] = `
<div>
  There has been a network problem on 
  <span>
    <strong>
      ARK Devnet
    </strong>
    , 
  </span>
  <span>
    <span>
       
      and
       
    </span>
    <strong>
      ARK Mainnet
    </strong>
  </span>
   while trying to retrieve your wallet information and as a result, your data could be out of sync or incorrect. Click 
  <span
    data-testid="SyncErrorMessage__retry"
  >
    <a
      data-discover="true"
      href="/"
    >
      <a
        class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 ring-focus group/inner inline-block"
        data-ring-focus-margin="-m-1"
        data-testid="Link"
      >
        <span
          class="border-b border-transparent break-all transition-colors delay-100 duration-200 group-hover/inner:border-current"
        >
          here
        </span>
      </a>
    </a>
  </span>
   to retry.
</div>
`;
